<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <item
        android:id="@+id/bottom_menu_home"
        android:icon="@drawable/main_tab_icon_select"
        android:title="@string/main_tab_cash_text" />

    <item
        android:id="@+id/bottom_menu_found"
        android:icon="@drawable/main_tab_sys_icon_select"
        android:title="@string/main_tab_service_text" />

    <item
        android:id="@+id/bottom_menu_project"
        android:icon="@drawable/main_tab_project_icon_select"
        android:title="@string/main_tab_project_text" />

    <item
        android:id="@+id/bottom_menu_navigation"
        android:icon="@drawable/main_tab_navigation_icon_select"
        android:title="@string/main_tab_navigation_text" />


</menu>